--- a/makanan.html
+++ b/makanan.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kategori: Makanan</title>
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <style>
@@ -13,15 +13,12 @@
       padding: 20px;
       text-align: center;
     }
-    h1 { color: #333; }
-    .gear-container { position: absolute; top: 20px; right: 20px; }
-    .gear-btn { font-size: 1.5em; background: none; border: none; cursor: pointer; }
-    .pengaturan { display: none; flex-direction: column; background: white; border: 1px solid #ccc; border-radius: 8px; padding: 5px; position: absolute; top: 30px; right: 0; z-index: 99; }
-    .pengaturan.show { display: flex; }
-    .pengaturan button { background-color: #3498db; color: white; border: none; padding: 6px 10px; margin: 4px; border-radius: 6px; cursor: pointer; }
+    h1 {
+      color: #333;
+    }
     .voice-select {
-      margin: 15px auto 20px;
-      max-width: 200px;
+      margin: 10px auto 20px;
+      max-width: 300px;
     }
     .voice-select select {
       width: 100%;
@@ -31,14 +28,93 @@
       border: 1px solid #ccc;
       cursor: pointer;
     }
-    .container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px; max-width: 600px; margin: 0 auto 40px; }
-    .item { padding: 10px 10px 40px 10px; background-color: #ffffff; border: 2px solid #cbd5e1; border-radius: 12px; box-shadow: 2px 2px 6px #00000033; cursor: pointer; position: relative; }
-    .emoji { font-size: 2.5em; }
-    .item p { margin: 5px 0; font-weight: bold; }
-    .controls { position: absolute; bottom: 10px; right: 10px; display: flex; gap: 10px; }
-    .fav { color: gray; }
-    .fav.active { color: gold; text-shadow: 0 0 3px gold; }
-    .feedback { font-size: 0.9em; font-weight: bold; color: #0a3d62; margin-top: 4px; min-height: 18px; }
+    .gear-container {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+    .gear-btn {
+      font-size: 1.5em;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+    .pengaturan {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 30px;
+      right: 0;
+      background: white;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 5px;
+      z-index: 99;
+    }
+    .pengaturan.hidden {
+      display: none;
+    }
+    .pengaturan button {
+      background-color: #3498db;
+      color: white;
+      border: none;
+      padding: 6px 10px;
+      margin: 4px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 15px;
+      max-width: 600px;
+      margin: 0 auto 40px;
+    }
+    .item {
+      padding: 8px 10px 18px 10px;
+      box-shadow: 2px 2px 6px #00000033;
+      border-radius: 12px;
+      cursor: pointer;
+      background-color: #ffffff;
+      border: 2px solid #cbd5e1;
+      position: relative;
+    }
+    .item:hover {
+      transform: scale(1.03);
+    }
+    .emoji {
+      font-size: 2.5em;
+    }
+    .item p {
+      margin: 5px 0;
+      font-size: 1em;
+      font-weight: bold;
+      color: #1f2937;
+    }
+    .controls {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 5px;
+    }
+    .controls button {
+      background: none;
+      border: none;
+      font-size: 1.2em;
+      cursor: pointer;
+    }
+    .fav {
+      color: gray;
+    }
+    .fav.active {
+      color: gold;
+      text-shadow: 0 0 3px gold;
+    }
+    .feedback {
+      margin-top: 4px;
+      font-size: 0.9em;
+      min-height: 18px;
+    }
   </style>
 </head>
 <body>
@@ -46,7 +122,7 @@
 
   <div class="gear-container">
     <button class="gear-btn" onclick="togglePengaturan()">⚙️</button>
-    <div id="menuPengaturan" class="pengaturan">
+    <div id="menuPengaturan" class="pengaturan hidden">
       <button onclick="tambahKosakata()">➕ Tambah</button>
       <button onclick="hapusKosakata()">🗑️ Hapus</button>
     </div>
@@ -99,21 +175,18 @@
     const favoritList = JSON.parse(localStorage.getItem('favoritList') || '[]');
 
     function togglePengaturan() {
-      document.getElementById('menuPengaturan').classList.toggle('show');
+      document.getElementById('menuPengaturan').classList.toggle('hidden');
     }
 
     function tambahKosakata() {
       const teks = prompt("Masukkan teks:");
-      const emoji = prompt("Masukkan emoji (contoh: 🍕, 🎮, 🧃):");
-      if (!teks || !emoji) return alert("Teks dan emoji wajib diisi!");
-      const newItem = { teks: teks.trim(), emoji: emoji.trim() };
-      if (dataKategori.items.some(item => item.teks === newItem.teks)) {
-        alert("Teks ini sudah ada.");
-        return;
+      const emoji = prompt("Masukkan emoji:");
+      if (teks && emoji) {
+        const newItem = { teks: teks.trim(), emoji: emoji.trim() };
+        dataKategori.items.push(newItem);
+        saveItems(dataKategori.items);
+        renderGridKategori();
       }
-      dataKategori.items.push(newItem);
-      saveItems(dataKategori.items);
-      renderGridKategori();
     }
 
     function hapusKosakata() {
@@ -133,22 +206,13 @@
       responsiveVoice.speak(teks, voice);
     }
 
-    function toggleFavorit(teks) {
-      const index = favoritList.indexOf(teks);
-      if (index !== -1) favoritList.splice(index, 1);
-      else favoritList.push(teks);
-      localStorage.setItem('favoritList', JSON.stringify(favoritList));
-      renderGridKategori();
-    }
-
-    function latih(teksTarget, id) {
-      const voice = document.getElementById('voiceSelect').value;
+    function latih(teks, id) {
       const recognition = new webkitSpeechRecognition();
       recognition.lang = 'id-ID';
       recognition.interimResults = false;
       recognition.onresult = (event) => {
         const hasil = event.results[0][0].transcript.toLowerCase();
-        const skor = kemiripan(hasil, teksTarget.toLowerCase());
+        const skor = kemiripan(hasil, teks.toLowerCase());
         const feedback = document.getElementById("feedback-" + id);
         if (skor >= 0.8) {
           feedback.innerText = "✅ Bagus!";
@@ -158,7 +222,7 @@
           feedback.style.color = "red";
         }
       };
-      recognition.onerror = () => alert("Gagal mengenali suara. Coba lagi ya!");
+      recognition.onerror = () => alert("Gagal mengenali suara. Coba lagi!");
       recognition.start();
     }
 
@@ -184,12 +248,23 @@
       return dp[b.length][a.length];
     }
 
+    function toggleFavorit(teks) {
+      const index = favoritList.indexOf(teks);
+      if (index !== -1) {
+        favoritList.splice(index, 1);
+      } else {
+        favoritList.push(teks);
+      }
+      localStorage.setItem('favoritList', JSON.stringify(favoritList));
+      renderGridKategori();
+    }
+
     function renderGridKategori() {
       const container = document.getElementById('gridKategori');
       container.innerHTML = '';
       dataKategori.items.forEach(item => {
+        const idTeks = item.teks.toLowerCase().replace(/\s+/g, '-').replace(/[^\w-]/g, '');
         const isFavorit = favoritList.includes(item.teks);
-        const id = item.teks.replace(/\s+/g, '-');
         const div = document.createElement('div');
         div.className = 'item';
         div.innerHTML = `
@@ -197,16 +272,16 @@
           <p>${item.teks}</p>
           <div class="controls">
             <button class="fav ${isFavorit ? 'active' : ''}" onclick="event.stopPropagation(); toggleFavorit('${item.teks}')">${isFavorit ? '⭐' : '☆'}</button>
-            <button class="mic" onclick="event.stopPropagation(); latih('${item.teks}', '${id}')">🎤</button>
+            <button class="mic" onclick="event.stopPropagation(); latih('${item.teks}', '${idTeks}')">🎤</button>
           </div>
-          <p class="feedback" id="feedback-${id}"></p>
+          <p class="feedback" id="feedback-${idTeks}"></p>
         `;
         div.onclick = () => bicara(item.teks);
         container.appendChild(div);
       });
     }
 
-    window.onload = renderGridKategori;
+    window.onload = () => renderGridKategori();
   </script>
 </body>
 </html>
