--- a/lokasi_rumah.html
+++ b/lokasi_rumah.html
@@ -163,6 +163,7 @@
     const defaultItems = [
       { teks: 'Saya di rumah', emoji: '🏡' },
       { teks: 'Saya mau mandi', emoji: '🛀🏻' },
+      { teks: 'Saya mau ke toilet', emoji: '🚽' },
       { teks: 'Saya mau makan', emoji: '🍛' },
       { teks: 'Saya mau minum', emoji: '🥛' },
       { teks: 'Saya mau main', emoji: '🤹🏻‍♀️' },
