--- a/lokasi_rumah.html
+++ b/lokasi_rumah.html
@@ -168,6 +168,7 @@
       { teks: 'Saya mau minum', emoji: '🥛' },
       { teks: 'Saya mau main', emoji: '🤹🏻‍♀️' },
       { teks: 'Saya mau ikut', emoji: '🙋🏻‍♂️' },
+      { teks: 'Saya mau tidur', emoji: '😴' },
       { teks: 'Saya mau pergi', emoji: '🛵' },
       { teks: 'Saya mau sekolah', emoji: '🎒' },
       { teks: 'Saya mau solat', emoji: '🕌' },
