--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
 <body>
   <h1>Aku Bisa Bicara Mudah</h1>
   <button class="start-button" onclick="window.location.href='kategori.html'">▶️ START</button>
-  <button class="guru-button" onclick="window.location.href='tambah.html'">🔒 Mode Guru</button>
+  <button class="guru-button" onclick="window.location.href='tambah.html'">📖 Panduan & Layanan</button>
 </body>
 </html>
